# xfetch-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/mcp_server_xfetch/: __init__.py  __main__.py  server.py
tests/: test_xfetch.py
